# FEComponent

./: CMakeLists.txt  LICENSE  README.txt  main.cpp
FEM2D/: CMakeLists.txt  boundary.hpp  control.cpp  control.hpp  element.cpp  element.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp
FEM2D/cmake/: FindYamlCpp.cmake
FEM2D/data/: 2element.vtk  2element.yaml  beam.vtk  beam.yaml  beam1.yaml  beam2.yaml  case1.yaml  case2.yaml  case3.yaml  case4.yaml  case5.yaml  case6.yaml  cook.yaml  cpe4.vtk  cpe4.yaml  cylinder.vtk  roll.yaml
GUI/: vtkmain.py
NLS/docs/: 1D function.wps  README.txt  nls-quick_reference.pptx
NLS/src/: copy_includes.sh  makefile  nls.h
NLS/src/ctrl/: ctrl.cpp  ctrl.h
NLS/src/ctrl/orctrl/: oorctrl.cpp  oorctrl.h
NLS/src/linsys/: crout.cpp  crout.h  linearsystem.cpp  linearsystem.h  linsys.c  linsys.h  pcgcsr.cpp  pcgcsr.h  pcgprofile.cpp  pcgprofile.h  sparsetools.c  sparsetools.h
NLS/src/mathpack/: mathpack.cpp  mathpack.h
NLS/src/mempack/: mempack.cpp  mempack.h
NLS/src/model/: model.cpp  model.h
NLS/tests/: main.cpp  makefile  modbeam2.cpp  modbeam2.h  modbeam3.cpp  modbeam3.h  modfunc_1d.cpp  modfunc_1d.h  modfunc_2d.cpp  modfunc_2d.h  modst.cpp  modst.h  modstp.cpp  modstp.h  utl.cpp  utl.h
doc/: Discrete time integration algorithm.docx  FrontSTR theory.docx
include/material/: MaterialBase.h
include/misc/: VectTree.h  factory.hpp  tree.h
include/physical/: physicalBase.h  strainFunction.h
include/quadrature/: feQuadrature.h  qGaussLegendre.h  qHammer.h  qTrapez.h  quadrature.h  quadratureBase.h
include/shapefunction/: Interpolation.h  interpolateBase.h  interpolationBase.cpp  itpSerendip.h  itpSerendipShell.h  itpTriangle.h  polynomial.h  polynomial_space.h  polynomials_bdm.h  polynomials_p.h  shapefunc.h
src/: CMakeLists.txt  Material.cpp
tools/: arch-mingw-gnu-petsc.py  beam.py  cook.py  libmesh-mingw.sh  lifev-config.sh  mesher.py  metis-config.sh  moab_doconfig.bat  trilinos-gcc-as02.data  trilinos-wsl.data  trilinos_configure.sh  trilinos_doconfig.bat
tools/data/: parameters.yaml
(+152 files in other folders)
